correct color contrasts

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -401,7 +401,7 @@ nav a.active {
   width: calc((100% - 1em) / 2);
   margin: 0.2em;
   cursor: pointer;
-  background-color: rgb(150, 150, 150);
+  background-color: #767676;
   color: white;
 }
 
